agregue about us, servicios, idnex y cars page, todos con su css

--- a/about us.css
+++ b/about us.css
@@ -27,8 +27,11 @@ h1 {
     width: 700px;
     position: absolute;
     top: 300px;
+    
 }
 
-h3 {
-    columns: 2;
+.texto {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+     color: aliceblue;
 }
